proto definitions: get ticket request
